--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,8 @@ f90068558c.js"
                       </div>
                     </div>
                     <input type="submit" value="Submit" class="submit" />
-                    <input type="hidden" name="_next" class="next">
+                    <!-- <input type="hidden" name="_next" class="next"/> -->
+                    <input type="hidden" name="_captcha" value="false">
                   </form>
             </div>
         </div>
