--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ f90068558c.js"
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
   <body>
+    <div class="splash">
+      <h1 class="splash-text" data-aos="fade-right" data-aos-duration="200">
+        Hello Guys! <br> Welcome to the club
+      </h1>
+      <img src="assets/astronaut1.png" alt="" class="astonaut-dabbing">
+      <img src="assets/astronaut2.png" alt="" class="astronaut-takeoff">
+    </div>
     <header>
       <div class="header">
         <img
